@@ -3,6 +3,7 @@
 	* util.c, util.h: Add utility function read_file, which reads an
 	  entire binary file into a buffer.
 	* dmidecode.c: Add passing of flags parameter to dmi_table.
+	* dmidecode.c: Add reading of SMBIOS tables from sysfs.
 
 2015-04-20  Jean Delvare  <jdelvare@suse.de>
 
